# cptol

./: .gitignore  README.md  _config.yml
aoj-submissions/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
aoj-submissions/.github/workflows/: fetch_submissions.yaml
aoj-submissions/docker/: .env  docker-compose.yml
aoj-submissions/jp.ac.u-aizu.onlinejudge/1508/: 5757563.py  5757576.py  6327533.py
aoj-submissions/jp.ac.u-aizu.onlinejudge/ALDS1_12_A/: 4938258.py  4938262.py  4938265.py  4938671.py
aoj-submissions/jp.ac.u-aizu.onlinejudge/DPL_1_A/: 6058454.rs  6058506.rs
aoj-submissions/jp.ac.u-aizu.onlinejudge/DSL_1_A/: 5726962.py  5726973.py
aoj-submissions/jp.ac.u-aizu.onlinejudge/DSL_2_A/: 5718713.py  5720472.py  5720485.py  5720942.py  5720948.py  5720974.py  5720977.py  5720986.py  5720996.py  5721601.py  5721603.py  5721604.py  5721643.py
aoj-submissions/jp.ac.u-aizu.onlinejudge/DSL_2_B/: 4959404.py  5718504.py  5718593.py  5719582.py  5719590.py  5719592.py  5720415.py  5720416.py  5721595.py  5721616.py  5721621.py  5721638.py
aoj-submissions/jp.ac.u-aizu.onlinejudge/DSL_2_E/: 5719427.py
aoj-submissions/jp.ac.u-aizu.onlinejudge/GRL_1_A/: 6014849.rs  6014852.rs  6014863.rs  6014881.rs  6014890.rs  6014911.rs  6015937.rs
aoj-submissions/jp.ac.u-aizu.onlinejudge/GRL_1_B/: 6015371.rs  6015939.rs
aoj-submissions/jp.ac.u-aizu.onlinejudge/GRL_1_C/: 6015472.rs  6015979.rs
aoj-submissions/jp.ac.u-aizu.onlinejudge/GRL_2_A/: 6016022.rs  6016033.rs  6016275.rs  6016395.rs  6017822.rs  6017911.rs  6017938.rs  6017939.rs  6017942.rs
aoj-submissions/jp.ac.u-aizu.onlinejudge/GRL_3_A/: 6018823.rs  6021017.rs  6021049.rs  6220917.py  6220933.py  6220941.py  6220948.py
aoj-submissions/jp.ac.u-aizu.onlinejudge/GRL_3_B/: 6021013.rs  6021015.rs  6021024.rs  6021027.rs  6220965.py  6220968.py  6220990.py  6221016.py
aoj-submissions/jp.ac.u-aizu.onlinejudge/GRL_3_C/: 4931180.py  4931181.py  4931195.py  4931202.py  4934236.py  4934237.py  4934259.py  6021703.rs  6021927.rs  6021999.rs
aoj-submissions/jp.ac.u-aizu.onlinejudge/GRL_4_A/: 6022059.rs  6022063.rs  6022105.rs  6022112.rs
aoj-submissions/jp.ac.u-aizu.onlinejudge/GRL_4_B/: 6022130.rs
aoj-submissions/jp.ac.u-aizu.onlinejudge/GRL_5_A/: 6023058.rs  6023066.rs  6023074.rs
aoj-submissions/jp.ac.u-aizu.onlinejudge/GRL_5_B/: 6024631.rs  6024633.rs  6024640.rs  6219138.py  6219139.py  6219141.py
aoj-submissions/jp.ac.u-aizu.onlinejudge/GRL_5_C/: 6024917.rs  6024926.rs  6024944.rs  6024949.rs  6024951.rs  6024957.rs  6025019.rs  6025201.rs  6026553.rs  6026559.rs  6026691.rs  6026697.rs  6026704.rs  6026713.rs  6026717.rs  6026759.rs
aoj-submissions/jp.ac.u-aizu.onlinejudge/GRL_5_D/: 6027102.rs
aoj-submissions/jp.ac.u-aizu.onlinejudge/GRL_6_A/: 6036396.rs  6036472.rs  6036480.rs  6038078.rs
aoj-submissions/jp.ac.u-aizu.onlinejudge/GRL_7_A/: 6038790.rs  6039660.rs  6039668.rs  6039683.rs
aoj-submissions/jp.ac.u-aizu.onlinejudge/ITP1_1_A/: 6012874.rs
aoj-submissions/jp.ac.u-aizu.onlinejudge/ITP1_1_B/: 6012877.rs
aoj-submissions/jp.ac.u-aizu.onlinejudge/ITP1_1_C/: 6012878.rs
aoj-submissions/jp.ac.u-aizu.onlinejudge/ITP1_1_D/: 6012889.rs
aoj-submissions/jp.ac.u-aizu.onlinejudge/ITP1_2_A/: 6012893.rs  6012895.rs  6012899.rs
aoj-submissions/jp.ac.u-aizu.onlinejudge/ITP1_2_B/: 6012901.rs
aoj-submissions/jp.ac.u-aizu.onlinejudge/ITP1_2_C/: 6012912.rs  6012954.rs
aoj-submissions/jp.ac.u-aizu.onlinejudge/ITP1_2_D/: 6013065.rs
aoj-submissions/jp.ac.u-aizu.onlinejudge/ITP1_3_A/: 6013069.rs
aoj-submissions/jp.ac.u-aizu.onlinejudge/ITP1_3_B/: 6013197.rs
aoj-submissions/jp.ac.u-aizu.onlinejudge/ITP1_3_C/: 6013215.rs  6013222.rs  6013236.rs
aoj-submissions/jp.ac.u-aizu.onlinejudge/ITP1_3_D/: 6013248.rs
aoj-submissions/jp.ac.u-aizu.onlinejudge/ITP1_4_A/: 6013262.rs  6013264.rs
aoj-submissions/jp.ac.u-aizu.onlinejudge/ITP1_4_B/: 6013279.rs  6013281.rs  6013289.rs  6013290.rs  6013295.rs  6013298.rs
aoj-submissions/jp.ac.u-aizu.onlinejudge/ITP1_4_C/: 6013317.rs
aoj-submissions/jp.ac.u-aizu.onlinejudge/ITP1_4_D/: 6013336.rs  6013337.rs
aoj-submissions/jp.ac.u-aizu.onlinejudge/ITP1_5_A/: 6013356.rs
aoj-submissions/jp.ac.u-aizu.onlinejudge/ITP1_5_B/: 6013395.rs
aoj-submissions/jp.ac.u-aizu.onlinejudge/ITP1_5_C/: 6013407.rs
aoj-submissions/jp.ac.u-aizu.onlinejudge/ITP1_5_D/: 6013585.rs
aoj-submissions/jp.ac.u-aizu.onlinejudge/ITP1_6_A/: 6013604.rs
aoj-submissions/jp.ac.u-aizu.onlinejudge/ITP1_6_B/: 6013668.rs
aoj-submissions/jp.ac.u-aizu.onlinejudge/ITP1_6_C/: 6013733.rs
aoj-submissions/jp.ac.u-aizu.onlinejudge/ITP1_6_D/: 6013754.rs
aoj-submissions/jp.ac.u-aizu.onlinejudge/ITP1_7_A/: 6013905.rs
aoj-submissions/jp.ac.u-aizu.onlinejudge/ITP2_1_A/: 5755713.py  (+8 more)
aoj-submissions/src/: __main__.py
py/: ci.sh  pyproject.toml
py/cptol/: __init__.py  crawl.py  result.py  scrape.py
py/scripts/: fetch_language_list_as_json.py
(+8895 files in other folders)
